Tree view: Crash during tooltip creation #114962

Closed
opened 2023-11-16 06:23:24 +01:00 by Vinayak-V-Nair · 8 comments

System Information
Operating system: windows 11
Graphics card: Nvdia RTX 4090

Blender Version - 4.0
Blender 4.0 crashes every time I try to drag objects or collection to light linking if the outliner is open in another window.
Crash during tooltip creation. This happens in GPv3 layertree UI and in nodes interface panel when scrolling.

Exact steps for others to reproduce the error

  • Go to windows>New window
  • Change it to outliner (shift+f9)
  • select a light source > Object properties > shading > Light Linking > new
  • Drag an object from the new window to the light linking
  • crash

It works when everything is in the same window.
Based on the default startup

**System Information** Operating system: windows 11 Graphics card: Nvdia RTX 4090 Blender Version - 4.0 Blender 4.0 crashes every time I try to drag objects or collection to light linking if the outliner is open in another window. Crash during tooltip creation. This happens in GPv3 layertree UI and in nodes interface panel when scrolling. **Exact steps for others to reproduce the error** - Go to windows>New window - Change it to outliner (shift+f9) - select a light source > Object properties > shading > Light Linking > new - Drag an object from the new window to the light linking - crash It works when everything is in the same window. Based on the default startup
Vinayak-V-Nair added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 06:23:25 +01:00
Member

Hi, thanks for the report. I can confirm. Crash is observable in other tree-view structures too (i.e. GPv3).

Hi, thanks for the report. I can confirm. Crash is observable in other tree-view structures too (i.e. GPv3).
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-16 08:07:54 +01:00
Member

It seems region at drop point is not recognized correctly. I'm not sure what the actual fix will be but a quick workaround is to do null check for drop_target in drop_target_tooltip
@JulianEisel , can you check the issue?

It seems region at drop point is not recognized correctly. I'm not sure what the actual fix will be but a quick workaround is to do null check for `drop_target` in `drop_target_tooltip` @JulianEisel , can you check the issue?
Pratik Borhade changed title from Crash when dragging object to light linking if the outliner is open in another window to Tree view: Crash during tooltip creation 2023-12-18 12:09:10 +01:00
Pratik Borhade self-assigned this 2024-01-08 12:39:28 +01:00
Member

Will raise priority since this is a crasher (and not a totally unlikely situation to run into)

Will raise priority since this is a crasher (and not a totally unlikely situation to run into)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-02-12 14:57:24 +01:00
Member

@PratikPB2123 's #116892 will fix this, but needs a trivial change. So we should have this resolved quickly.

@PratikPB2123 's #116892 will fix this, but needs a trivial change. So we should have this resolved quickly.
Member

@Harley , sure, I'll update the PR. I did not receive the email about Brecht's comment (this has happened before, email notification sometimes goes into promotion/socials category 🤷‍♂️)

@Harley , sure, I'll update the PR. I did not receive the email about Brecht's comment (this has happened before, email notification sometimes goes into promotion/socials category 🤷‍♂️)
Member

@PratikPB2123

No worries at all. I only came here because this bug is in our list.

@PratikPB2123 No worries at all. I only came here because this bug is in our list.
Member

@Harley hi, updated the PR btw ;)

@Harley hi, updated the PR btw ;)
Member

Oh yeah, I missed that today. I'll give it another look in the morning. Thanks for the reminder!

Oh yeah, I missed that today. I'll give it another look in the morning. Thanks for the reminder!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-16 17:39:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114962
No description provided.