Fix #114962: Tree view: Crash during tooltip creation

Crash when dragging tree-item from floating window to other instance of
tree view. drop_target is nullptr when screen-cords of mouse pointer
is outside the region.